--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,10 @@
 					</webApp>
 				</configuration>
 			</plugin>
+			<plugin>
+                               <artifactId>maven-war-plugin</artifactId>
+                               <version>3.2.2</version>
+                        </plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
