--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                               <artifactId>maven-war-plugin</artifactId>
-                               <version>3.2.2</version>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-war-plugin</artifactId>
+				    <version>3.3.2</version>
                         </plugin>
 
 			<plugin>
